Fix forum page overflow, refactor
improve performance by not need to refresh everything after making
a post. Now title, author and tags cannot overflow

--- a/game-website/frontend/src/Components/Post/Post.css
+++ b/game-website/frontend/src/Components/Post/Post.css
@@ -9,13 +9,21 @@
     background-color: white;
 }
 
+.creator{
+    overflow: auto;
+}
 
 .tags{
+    overflow: auto;
     padding-left: 10px;
     text-align: left;
     list-style-type: '#';
     display: grid;
     grid-template-columns: repeat(12, auto);
+}
+
+.title{
+    overflow:auto;
 }
 
 .message{
